# rust_async

./: Cargo.toml  README.md
.github/workflows/: build.yml  main.yml
notification_daemon/: Cargo.toml
notification_daemon/src/: main.rs
notification_daemon/src/dbus/: mod.rs  notifications.rs  prep_notifications.rs  raw_handlers.rs  service.rs
notification_daemon/src/qt/: mod.rs  notif_widget.rs
notification_daemon/src/qt/ui/: new_form.ui  new_simple_ui.ui
notification_daemon/src/terminal/: drawing.rs  mod.rs  screen.rs
notification_daemon/ui/: new_form.ui
src/: 404.html  lib.rs  main.rs
src/dbus/: notifications.rs  service.rs
src/web_server/: handlers.rs
ui/: form.ui
web_server/: Cargo.toml
web_server/src/: main.rs
web_server/src/services/: handlers.rs
