[package]
name = "notification_daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
zbus = "3"
qt_widgets = "0.5.0"
qt_core = "0.5.0"
cpp_core = "0.6.0"
qt_ui_tools = "0.5.0"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
]
